[project]
name = "python-start"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "lxml>=6.1.0",
    "markitdown[all]>=0.1.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
    "uvicorn>=0.44.0",
]
